Added Features:
Added 8 more GUI themes